Adiciona comentários ao notebook

--- a/Limpeza e Análise exploratória - Cleaning and Exploratory Analysis.ipynb
+++ b/Limpeza e Análise exploratória - Cleaning and Exploratory Analysis.ipynb
@@ -17,6 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dados baixados do [site de microdados da Anac](https://sistemas.anac.gov.br/sas/downloads/view/frmDownload)\n",
+    "\n",
+    "(Data downloaded [Anac's microdata website](https://sistemas.anac.gov.br/sas/downloads/view/frmDownload))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -77,6 +86,15 @@
    "source": [
     "df_all['DTTM'] = pd.to_datetime(dict(year=df_all['ANO'], month=df_all['MES'], day=15))\n",
     "df_all.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos restringir a análise às tarifas populares (que seriam, em tese, as beneficiadas pela cobrança de bagagem à parte) emitidas pela Gol. Os dados não discriminam qual seria a tarifa popular, mas parece razoável considerar que ela seja a tarifa com maior número de assentos em cada trecho.\n",
+    "\n",
+    "Let's restrict the analysis to popular tickets (the ones that should have been benefited from the separate luggage charging) issued by Gol airline. The data doesn't discriminate which tickets are the \"popular\" ones, but it seems reasonable to assume that the ticket with the greatest number of seats are the ones we're looking for."
    ]
   },
   {
@@ -194,6 +212,15 @@
    ],
    "source": [
     "df_gol_popular.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora podemos tirar a mediana do valor das tarifas populares para cada mês ao longo de todos os trechos e plotar o resultado.\n",
+    "\n",
+    "Now it's possible to take the median values of the popular tickets for each each month across all flights and plot the results."
    ]
   },
   {
