Adiciona TODO ao notebook

--- a/Limpeza e Análise exploratória - Cleaning and Exploratory Analysis.ipynb
+++ b/Limpeza e Análise exploratória - Cleaning and Exploratory Analysis.ipynb
@@ -985,6 +985,15 @@
     "handle_tarifa_corrigida = plt.plot_date(x=pivoted_julho.index, y=pivoted_julho['TARIFA_CORRIGIDA'], ls='-')\n",
     "handle_tarifa = plt.plot_date(x=pivoted_julho.index, y=pivoted_julho['TARIFA'], ls='-')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO\n",
+    "* Calcular as tendências (derivadas) em torno dos meses de Julho\n",
+    "* Fazer o teste de hipótese em cima dessas tendências"
+   ]
   }
  ],
  "metadata": {
