Corrige título e metadados de slide no notebook

--- a/Apresentacao.ipynb
+++ b/Apresentacao.ipynb
@@ -8,14 +8,16 @@
     }
    },
    "source": [
-    "# Lunch and Learn\n",
-    "\n",
-    "## Evolução de preços de passagens após cobrança por bagagem\n"
+    "# Evolução de preços de passagens após cobrança por bagagem"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![](imagens/noticia_inicio_cobranca.png)\n",
     "\n",
